--- a/src/_modules/functions/functions.jade
+++ b/src/_modules/functions/functions.jade
@@ -1,6 +1,9 @@
 mixin functions
 
-   div.functions
-    div.functions__item.functions__item--search
-    div.functions__item.functions__item--search
-    div.functions__item.functions__item--search
+   +b.functions
+    +e.item
+      +search
+    +e.item
+      +singin
+    +e.item
+      +cart
